import { describe, expect, test } from "vitest";
import type { IDisciple } from "../../../../../../src/domain/game/models/disciple.types.ts";
import mapDiscipleToMessage, {
    getDiscipleBaseStatsTable,
} from "../../../../../../src/presentation/discord/mappers/search/disciple.ts";
import { DISCIPLE } from "./disciple.fixtures.ts";

describe(getDiscipleBaseStatsTable.name, () => {
    test("returns stats for level 1 and the relevant levels", () => {
        const discipleStats = {
            getHp: ({ level }) => level * 10,
            getAtk: ({ level }) => level * 5,
        } satisfies Parameters<typeof getDiscipleBaseStatsTable>[0];

        expect(getDiscipleBaseStatsTable(discipleStats)).toEqual([
            ["Level", 1, 8, 9, 10, 11],
            ["HP", 10, 80, 90, 100, 110],
            ["Atk", 5, 40, 45, 50, 55],
        ]);
    });
});

describe(mapDiscipleToMessage.name, () => {
    test.each([
        ["base", DISCIPLE],
        [
            "unlinked shadow music",
            {
                ...DISCIPLE,
                shadowMusic: {
                    ...DISCIPLE.shadowMusic,
                    url: null,
                },
            },
        ],
        [
            "with supports",
            {
                ...DISCIPLE,
                supports: [
                    { name: "Gotthold" },
                    { name: "Carina" },
                    // TODO: narrow mapDiscipleToMessage's input type once IDisciple does not use Iterable for lists anymore
                ] as IDisciple["supports"],
            },
        ],
    ])("%s", (_, disciple) => {
        expect(mapDiscipleToMessage(disciple)).toMatchSnapshot();
    });
});
